Changelog
=========

1.0b5 (unreleased)
------------------

* Added norwegian translation.
  [ggozad]

* Protect against missing canonical in conversationCanonicalAdapterFactory.
  [hannosch]

* Documentation for Captcha plugin architecture and email notification added.
  See http://packages.python.org/plone.app.discussion.
  [timo]
  
* Use sphinx.plonetheme for plone.app.discussion documentation.
  [timo]

* Avoid deprecation warning for the Globals package.
  [hannosch]

* Remove the hard coded check for title and text when the comment form is
  submitted. This allows integrators to write schema extenders that remove the
  title from the comment form.
  [timo]

* Move captcha registration to its own captcha.zcml file.
  [timo]

* Akismet (http://akismet.com/) spam protection plugin (collective.akismet)
  support added.
  [timo]

* Simplify the CaptchaValidator class by dynamically adapting a view with the
  name of the captcha plugin (e.g. recaptcha, captcha, akismet) for the
  validator.
  [timo]

* Dutch translation added.
  [kcleong]

* Enable caching and merging for comments.js to save some requests.
  [pelle]

* Design notes for the Captcha plugin architecture added.
  [timo]

* Make IDiscussionLayer inherit from Interface again. Remove IDefaultPloneLayer,
  since Plone 4.0b1 and plone.theme 2.0b1 are out now.
  [timo]

* Clean up Javascript code.
  [timo]

* Fix encoding error in migration procedure, otherwise migration procedure
  breaks on joining output list in case we have there any non-ascii characters.
  [piv]

* plone.z3cform 0.6.0 compatibility (fix maximum recursion depth error which
  appears with plone.z3cform higher than 0.5.10).
  [piv]

* Removed moderation.js from js registry and include it only in moderation.pt as
  that is the only place where it is used.
  [ggozad]


1.0b4 (2010-04-04)
------------------

* New feature: As a moderator, I am notified when new comments require my
  attention.
  [timo]
