@@ -44,9 +44,9 @@ develop =
     .
 
 auto-checkout =
-    plone.formwidget.captcha
-    plone.formwidget.recaptcha
-    collective.akismet
+#    plone.formwidget.captcha
+#    plone.formwidget.recaptcha
+#    collective.akismet
     collective.autoresizetextarea
     plone.app.z3cform
     plone.z3cform
