@@ -8,7 +8,7 @@ from z3c.form import validator
 
 from z3c.form.interfaces import IValidator
 
-from zope.component import getMultiAdapter, provideAdapter, queryUtility
+from zope.component import getMultiAdapter, provideAdapter, getUtility
 
 from zope.schema import ValidationError
 
@@ -54,7 +54,7 @@ class CaptchaValidator(validator.SimpleFieldValidator):
 
         data = self.request.form
 
-        registry = queryUtility(IRegistry)
+        registry = getUtility(IRegistry)
         settings = registry.forInterface(IDiscussionSettings)
 
         if settings.captcha != 'disabled':
@@ -72,4 +72,3 @@ class CaptchaValidator(validator.SimpleFieldValidator):
 # Register Captcha validator for the Captcha field in the ICaptcha Form
 validator.WidgetValidatorDiscriminators(CaptchaValidator, 
                                         field=ICaptcha['captcha'])
-            
