@@ -1,47 +1,3 @@
 [versions]
-Jinja2 = 2.5
-Products.PDBDebugMode = 1.1
-Pygments = 1.3.1
 collective.recipe.omelette = 0.9
 collective.recipe.sphinxbuilder = 0.6.3.2
-collective.z3cform.datetimewidget = 1.0
-plone.autoform = 1.0b3
-plone.supermodel = 1.0b5
-recaptcha-client = 1.0.5
-repoze.sphinx.autointerface = 0.3
-
-#Required by:
-#plone.app.discussion 1.0b5dev
-collective.autopermission = 1.0b1
-
-#Required by:
-#plone.app.discussion 1.0b5dev
-plone.app.registry = 1.0b2
-
-#Required by:
-#plone.app.discussion 1.0b5dev
-plone.app.z3cform = 0.5.0
-
-#Required by:
-#plone.app.discussion 1.0b5dev
-plone.registry = 1.0b2
-
-#Required by:
-#plone.app.discussion 1.0b5dev
-plone.z3cform = 0.6.0
-
-#Required by:
-#plone.formwidget.captcha 1.0b1
-skimpyGimpy = 1.4
-
-#Required by:
-#plone.z3cform 0.6.0
-z3c.batching = 1.1.0
-
-#Required by:
-#plone.z3cform 0.6.0
-z3c.form = 2.3.4
-
-#Required by:
-#plone.app.z3cform 0.5.0
-z3c.formwidget.query = 0.5
