@@ -4,6 +4,9 @@ Changelog
 1.0b5 (unreleased)
 ------------------
 
+* Always use zope.component getUtility instead of queryUtility.
+  [timo]
+  
 * Added norwegian translation.
   [ggozad]
 
